template/grafana-ingress-prod.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - mon.prod.foo4.ru
      secretName: grafana-certificate 
  defaultBackend:
    service:
      name: grafana
      port:
        number: 3000
  rules:
    - host: mon.prod.foo4.ru
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 3000
