template/grafana-ingress-stage.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  #   - hosts:
  #     - mon.stage.foo4.ru
  #     secretName: letsencrypt-prod 
  defaultBackend:
    service:
      name: grafana
      port:
        number: 3000
  rules:
    - host: mon.stage.foo4.ru
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 3000
